feat: implement comprehensive Schema.org structured data (JSON-LD)
- Add WebSite, Organization, SoftwareApplication schema to index.html
- Add SoftwareApplication, BreadcrumbList schema to calculator.html
- Add Article, BreadcrumbList schema to blog posts
- Add CollectionPage, BreadcrumbList schema to index pages
- Add ItemPage/Article schema to ore guide~

--- a/armor.html
+++ b/armor.html
@@ -126,6 +126,141 @@
                     "gamePlatform": "Roblox"
                 },
                 "isPartOf": {"@id": "https://forge-calculator.com/armor#webpage"}
+            },
+            {
+                "@type": "Product",
+                "@id": "https://forge-calculator.com/armor#light-armor-product",
+                "name": "The Forge Light Armor Set",
+                "description": "Lightweight armor providing basic protection with minimal movement penalty. Perfect for agile combat styles in The Forge.",
+                "category": "Gaming Armor",
+                "brand": {
+                    "@type": "Brand",
+                    "name": "The Forge"
+                },
+                "offers": {
+                    "@type": "Offer",
+                    "price": "0",
+                    "priceCurrency": "USD",
+                    "availability": "https://schema.org/InStock",
+                    "description": "Craftable in The Forge game"
+                },
+                "additionalProperty": [
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Armor Type",
+                        "value": "Light Armor"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Defense Level",
+                        "value": "Low"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Mobility",
+                        "value": "High"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Difficulty",
+                        "value": "Beginner"
+                    }
+                ],
+                "isRelatedTo": {
+                    "@type": "VideoGame",
+                    "name": "The Forge",
+                    "gamePlatform": "Roblox"
+                }
+            },
+            {
+                "@type": "Product",
+                "@id": "https://forge-calculator.com/armor#medium-armor-product",
+                "name": "The Forge Medium Armor Set",
+                "description": "Balanced armor offering good protection with moderate mobility. The most versatile armor choice for most players.",
+                "category": "Gaming Armor",
+                "brand": {
+                    "@type": "Brand",
+                    "name": "The Forge"
+                },
+                "offers": {
+                    "@type": "Offer",
+                    "price": "0",
+                    "priceCurrency": "USD",
+                    "availability": "https://schema.org/InStock",
+                    "description": "Craftable in The Forge game"
+                },
+                "additionalProperty": [
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Armor Type",
+                        "value": "Medium Armor"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Defense Level",
+                        "value": "Medium"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Mobility",
+                        "value": "Medium"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Difficulty",
+                        "value": "Intermediate"
+                    }
+                ],
+                "isRelatedTo": {
+                    "@type": "VideoGame",
+                    "name": "The Forge",
+                    "gamePlatform": "Roblox"
+                }
+            },
+            {
+                "@type": "Product",
+                "@id": "https://forge-calculator.com/armor#heavy-armor-product",
+                "name": "The Forge Heavy Armor Set",
+                "description": "Maximum protection armor for tank-style gameplay. Provides exceptional defense at the cost of mobility in The Forge.",
+                "category": "Gaming Armor",
+                "brand": {
+                    "@type": "Brand",
+                    "name": "The Forge"
+                },
+                "offers": {
+                    "@type": "Offer",
+                    "price": "0",
+                    "priceCurrency": "USD",
+                    "availability": "https://schema.org/InStock",
+                    "description": "Craftable in The Forge game"
+                },
+                "additionalProperty": [
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Armor Type",
+                        "value": "Heavy Armor"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Defense Level",
+                        "value": "Very High"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Mobility",
+                        "value": "Low"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Difficulty",
+                        "value": "Expert"
+                    }
+                ],
+                "isRelatedTo": {
+                    "@type": "VideoGame",
+                    "name": "The Forge",
+                    "gamePlatform": "Roblox"
+                }
             }
         ]
     }
