--- a/index.html
+++ b/index.html
@@ -93,6 +93,29 @@
                 ]
             },
             {
+                "@type": "WebSite",
+                "@id": "https://forge-calculator.com/#website",
+                "url": "https://forge-calculator.com/",
+                "name": "Roblox The Forge Calculator",
+                "description": "Master your weapon and armor crafting with The Forge Calculator. Optimize ore combinations and trait setups.",
+                "publisher": {
+                    "@id": "https://forge-calculator.com/#organization"
+                },
+                "inLanguage": "en-US"
+            },
+            {
+                "@type": "SoftwareApplication",
+                "@id": "https://forge-calculator.com/#software",
+                "name": "The Forge Calculator",
+                "operatingSystem": "Any",
+                "applicationCategory": "GameApplication",
+                "offers": {
+                    "@type": "Offer",
+                    "price": "0",
+                    "priceCurrency": "USD"
+                }
+            },
+            {
                 "@type": "VideoGame",
                 "@id": "https://forge-calculator.com/#forge-game",
                 "name": "The Forge",
