--- a/ore/mythril.html
+++ b/ore/mythril.html
@@ -48,7 +48,56 @@
     <!-- Ahrefs Analytics -->
     <script src="https://analytics.ahrefs.com/analytics.js" data-key="EpsJtUp2VOHq8C8Dwkg1zQ" async></script>
     
-    <!-- Advertisement code removed for security compliance --></head>
+    <!-- Advertisement code removed for security compliance -->    <!-- Structured Data - JSON-LD -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@graph": [
+            {
+                "@type": "Article",
+                "headline": "Mythril Ore Guide - How to Get Mythril in The Forge",
+                "image": "https://forge-calculator.com/ores/mythril.png",
+                "author": {
+                    "@type": "Organization",
+                    "name": "Forge Calculator"
+                },
+                "publisher": {
+                    "@type": "Organization",
+                    "name": "Forge Calculator",
+                    "logo": {
+                        "@type": "ImageObject",
+                        "url": "https://forge-calculator.com/favicon-120x120.png"
+                    }
+                },
+                "description": "Complete guide to Mythril ore in The Forge - Learn how to get Mythril, where to mine it, and how to use it for crafting legendary armor and weapons.",
+                "mainEntityOfPage": {
+                    "@type": "WebPage",
+                    "@id": "https://forge-calculator.com/ore/mythril"
+                }
+            },
+            {
+                "@type": "BreadcrumbList",
+                "itemListElement": [{
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Home",
+                    "item": "https://forge-calculator.com/"
+                }, {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "Ores",
+                    "item": "https://forge-calculator.com/ore"
+                }, {
+                    "@type": "ListItem",
+                    "position": 3,
+                    "name": "Mythril",
+                    "item": "https://forge-calculator.com/ore/mythril"
+                }]
+            }
+        ]
+    }
+    </script>
+</head>
 <body>
     <header>
         <div class="container">
