--- a/weapons.html
+++ b/weapons.html
@@ -214,6 +214,131 @@
                     "description": "Step-by-step video guide for crafting legendary swords",
                     "contentUrl": "https://forge-calculator.com/videos/legendary-sword-tutorial"
                 }
+            },
+            {
+                "@type": "Product",
+                "@id": "https://forge-calculator.com/weapons#dagger-product",
+                "name": "The Forge Dagger",
+                "description": "Fast, lightweight weapon perfect for beginners in The Forge. Offers quick attack speed and easy handling.",
+                "category": "Gaming Weapon",
+                "brand": {
+                    "@type": "Brand",
+                    "name": "The Forge"
+                },
+                "offers": {
+                    "@type": "Offer",
+                    "price": "0",
+                    "priceCurrency": "USD",
+                    "availability": "https://schema.org/InStock",
+                    "description": "Craftable in The Forge game"
+                },
+                "additionalProperty": [
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Weapon Type",
+                        "value": "Dagger"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Attack Speed",
+                        "value": "Fast"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Difficulty",
+                        "value": "Beginner"
+                    }
+                ],
+                "isRelatedTo": {
+                    "@type": "VideoGame",
+                    "name": "The Forge",
+                    "gamePlatform": "Roblox"
+                }
+            },
+            {
+                "@type": "Product",
+                "@id": "https://forge-calculator.com/weapons#sword-product",
+                "name": "The Forge Sword",
+                "description": "Balanced weapon with moderate damage and speed. The most versatile weapon choice in The Forge.",
+                "category": "Gaming Weapon",
+                "brand": {
+                    "@type": "Brand",
+                    "name": "The Forge"
+                },
+                "offers": {
+                    "@type": "Offer",
+                    "price": "0",
+                    "priceCurrency": "USD",
+                    "availability": "https://schema.org/InStock",
+                    "description": "Craftable in The Forge game"
+                },
+                "additionalProperty": [
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Weapon Type",
+                        "value": "Sword"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Attack Speed",
+                        "value": "Medium"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Difficulty",
+                        "value": "Intermediate"
+                    }
+                ],
+                "isRelatedTo": {
+                    "@type": "VideoGame",
+                    "name": "The Forge",
+                    "gamePlatform": "Roblox"
+                }
+            },
+            {
+                "@type": "Product",
+                "@id": "https://forge-calculator.com/weapons#colossal-sword-product",
+                "name": "The Forge Colossal Sword",
+                "description": "Massive two-handed weapon with devastating damage. The ultimate weapon for experienced players in The Forge.",
+                "category": "Gaming Weapon",
+                "brand": {
+                    "@type": "Brand",
+                    "name": "The Forge"
+                },
+                "offers": {
+                    "@type": "Offer",
+                    "price": "0",
+                    "priceCurrency": "USD",
+                    "availability": "https://schema.org/InStock",
+                    "description": "Craftable in The Forge game"
+                },
+                "additionalProperty": [
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Weapon Type",
+                        "value": "Colossal Sword"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Attack Speed",
+                        "value": "Slow"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Damage",
+                        "value": "Very High"
+                    },
+                    {
+                        "@type": "PropertyValue",
+                        "name": "Difficulty",
+                        "value": "Expert"
+                    }
+                ],
+                "isRelatedTo": {
+                    "@type": "VideoGame",
+                    "name": "The Forge",
+                    "gamePlatform": "Roblox"
+                }
             }
         ]
     }
