--- a/recipes/index.html
+++ b/recipes/index.html
@@ -55,7 +55,35 @@
     
 
     
-    <!-- Advertisement code removed for security compliance --></head>
+    <!-- Advertisement code removed for security compliance -->    <!-- Structured Data - JSON-LD -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@graph": [
+            {
+                "@type": "CollectionPage",
+                "name": "The Forge Recipes - Complete Crafting Recipe Database",
+                "description": "Discover the best crafting recipes for The Forge. Complete database of weapon and armor recipes with ore combinations.",
+                "url": "https://forge-calculator.com/recipes"
+            },
+            {
+                "@type": "BreadcrumbList",
+                "itemListElement": [{
+                    "@type": "ListItem",
+                    "position": 1,
+                    "name": "Home",
+                    "item": "https://forge-calculator.com/"
+                }, {
+                    "@type": "ListItem",
+                    "position": 2,
+                    "name": "Recipes",
+                    "item": "https://forge-calculator.com/recipes"
+                }]
+            }
+        ]
+    }
+    </script>
+</head>
 <body>
     <header>
         <div class="container">
