feat(codes): add new active code FORGEWEEKEND2 and update date

--- a/codes/index.html
+++ b/codes/index.html
@@ -104,7 +104,7 @@
                     "url": "https://forge-calculator.com/favicon-120x120.png"
                 },
                 "datePublished": "2024-01-01",
-                "dateModified": "2026-01-16",
+                "dateModified": "2026-01-26",
                 "author": {"@id": "https://forge-calculator.com/#organization"},
                 "publisher": {"@id": "https://forge-calculator.com/#organization"}
             },
@@ -157,17 +157,8 @@
                         "position": 1,
                         "item": {
                             "@type": "Thing",
-                            "name": "FORGWEEKEND!",
-                            "description": "10x Rerolls & 1x Miner Totem - Weekend special code"
-                        }
-                    },
-                    {
-                        "@type": "ListItem",
-                        "position": 2,
-                        "item": {
-                            "@type": "Thing",
-                            "name": "MAZE",
-                            "description": "5x Rerolls & 3x Fungi's Potion - Maze event code"
+                            "name": "FORGEWEEKEND2 !",
+                            "description": "10x reroll"
                         }
                     }
                 ]
@@ -214,27 +205,20 @@
         </div>
 
         <div class="update-info">
-            <strong>📅 This page was last edited on 16 January 2026</strong> | <strong>⚡ Status:</strong> No active codes available at this time
+            <strong>📅 This page was last edited on 26 January 2026, at 05:26.</strong> | <strong>⚡ Status:</strong> Active codes available
         </div>
 
-        <!-- No Active Codes Section -->
+        <!-- Active Codes Section -->
         <div class="codes-section">
-            <h3>❌ No Active Codes Available</h3>
+            <h3>✅ Active Codes (Working)</h3>
             
-            <div class="no-codes-message">
-                <div class="no-codes-icon">🚫</div>
-                <div class="no-codes-text">
-                    <h4>No Working Codes Right Now</h4>
-                    <p>Unfortunately, there are no active The Forge codes available at this time. All previously working codes have expired.</p>
-                    <p>Don't worry! New codes are typically released during:</p>
-                    <ul>
-                        <li>🎮 Game updates and patches</li>
-                        <li>🎉 Special events and holidays</li>
-                        <li>📈 Player milestone celebrations</li>
-                        <li>🐛 Bug fixes and maintenance</li>
-                    </ul>
-                    <p><strong>💡 Tip:</strong> Bookmark this page and check back regularly for new codes!</p>
+            <div class="code-card">
+                <div class="code-info">
+                    <div class="code-name">FORGEWEEKEND2 !</div>
+                    <div class="code-reward">🎁 Reward: 10x reroll</div>
+                    <span class="code-status status-active">✓ ACTIVE</span>
                 </div>
+                <button class="copy-btn" onclick="copyCode('FORGEWEEKEND2 !', event)">Copy Code</button>
             </div>
         </div>
 
