feat(wiki): add Fungi NPC guide and update NPC list

--- a/wiki/npcs.html
+++ b/wiki/npcs.html
@@ -150,6 +150,21 @@
             </div>
         </div>
 
+        <!-- Fungi -->
+        <div class="content-section">
+            <h3><a href="/wiki/fungi" style="text-decoration: none; color: inherit;">Fungi</a></h3>
+            <div class="npc-card">
+                <div class="npc-icon">🍄</div>
+                <h4>Rare Blueprint Merchant</h4>
+                <div class="npc-info">
+                    <p><strong>📍 Location:</strong> Iceberg Island (Hidden Maze)</p>
+                    <p><strong>🎯 Role:</strong> Sells unique blueprints and potions</p>
+                    <p><strong>📖 Description:</strong> A mysterious merchant whose shop rotates daily. Sells high-tier weapon blueprints.</p>
+                    <p><strong>🔗 Guide:</strong> <a href="/wiki/fungi">View Full Shop & Location Guide</a></p>
+                </div>
+            </div>
+        </div>
+
         <!-- Bard -->
         <div class="content-section">
             <h3>Bard</h3>
