feat(wiki): add stock column to Fungi shop table

--- a/wiki/fungi.html
+++ b/wiki/fungi.html
@@ -186,6 +186,7 @@
                             <th>Item Name</th>
                             <th>Type</th>
                             <th>Price</th>
+                            <th>Stock</th>
                             <th>Stats / Effect</th>
                         </tr>
                     </thead>
@@ -194,78 +195,91 @@
                             <td class="item-name">Fungi's Potion</td>
                             <td class="item-type">Potion</td>
                             <td class="item-price">$17,500</td>
-                            <td class="item-stats">+20% Mining Speed, +15% Mining DMG, +15% Luck (Stock: 6)</td>
+                            <td class="item-stock">6</td>
+                            <td class="item-stats">+20% Mining Speed, +15% Mining DMG, +15% Luck</td>
                         </tr>
                         <tr>
                             <td class="item-name">Cultist Dagger</td>
                             <td class="item-type">Dagger Blueprint</td>
                             <td class="item-price">$68,000</td>
+                            <td class="item-stock">1</td>
                             <td class="item-stats">5.25 Damage, 0.35s Speed</td>
                         </tr>
                         <tr>
                             <td class="item-name">Shark's Fangs</td>
                             <td class="item-type">Dagger Blueprint</td>
                             <td class="item-price">$80,000</td>
+                            <td class="item-stock">1</td>
                             <td class="item-stats">3.87 Damage, 0.27s Speed</td>
                         </tr>
                         <tr>
                             <td class="item-name">Curved Dagger</td>
                             <td class="item-type">Dagger Blueprint</td>
                             <td class="item-price">$68,000</td>
+                            <td class="item-stock">1</td>
                             <td class="item-stats">4.95 Damage, 0.3s Speed</td>
                         </tr>
                         <tr>
                             <td class="item-name">Hook Blade</td>
                             <td class="item-type">Straight Sword Blueprint</td>
                             <td class="item-price">$140,000</td>
+                            <td class="item-stock">1</td>
                             <td class="item-stats">8.25 Damage, 0.44s Speed</td>
                         </tr>
                         <tr>
                             <td class="item-name">Crystallized Broadsword</td>
                             <td class="item-type">Straight Sword Blueprint</td>
                             <td class="item-price">$290,000</td>
+                            <td class="item-stock">1</td>
                             <td class="item-stats">9.975 Damage, 0.62s Speed</td>
                         </tr>
                         <tr>
                             <td class="item-name">Dark Knight's Gauntlets</td>
                             <td class="item-type">Gauntlet Blueprint</td>
                             <td class="item-price">$200,000</td>
+                            <td class="item-stock">1</td>
                             <td class="item-stats">10 Damage, 0.47s Speed</td>
                         </tr>
                         <tr>
                             <td class="item-name">Straight Edge Katana</td>
                             <td class="item-type">Katana Blueprint</td>
                             <td class="item-price">$230,000</td>
+                            <td class="item-stock">1</td>
                             <td class="item-stats">9.35 Damage, 0.6s Speed</td>
                         </tr>
                         <tr>
                             <td class="item-name">Ornate Short Axe</td>
                             <td class="item-type">Axe Blueprint</td>
                             <td class="item-price">$205,000</td>
+                            <td class="item-stock">1</td>
                             <td class="item-stats">8.4 Damage, 0.48s Speed</td>
                         </tr>
                         <tr>
                             <td class="item-name">Anchored Greatsword</td>
                             <td class="item-type">Great Sword Blueprint</td>
                             <td class="item-price">$440,000</td>
+                            <td class="item-stock">1</td>
                             <td class="item-stats">13.8 Damage, 0.91s Speed</td>
                         </tr>
                         <tr>
                             <td class="item-name">Dark Knight's Greatsword</td>
                             <td class="item-type">Great Sword Blueprint</td>
                             <td class="item-price">$485,000</td>
+                            <td class="item-stock">1</td>
                             <td class="item-stats">15 Damage, 1.11s Speed</td>
                         </tr>
                         <tr>
                             <td class="item-name">Colossal Terrorblade</td>
                             <td class="item-type">Colossal Sword Blueprint</td>
                             <td class="item-price">$470,000</td>
+                            <td class="item-stock">1</td>
                             <td class="item-stats">22 Damage, 1.02s Speed</td>
                         </tr>
                         <tr>
                             <td class="item-name">Colossal Gemblade</td>
                             <td class="item-type">Colossal Sword Blueprint</td>
                             <td class="item-price">$500,000</td>
+                            <td class="item-stock">1</td>
                             <td class="item-stats">23 Damage, 1.12s Speed</td>
                         </tr>
                     </tbody>
