docs: update Fungi guide with Coinite cost and farming tips

--- a/wiki/fungi.html
+++ b/wiki/fungi.html
@@ -159,7 +159,8 @@
                 <h3>📜 Fungi Overview</h3>
                 <div class="npc-card">
                     <div class="npc-info">
-                        <p><strong>📍 Location:</strong> Hidden Maze on <span class="highlight-text">Iceberg Island</span></p>
+                        <p><strong>📍 Location:</strong> Hidden Maze on <span class="highlight-text">Iceberg Island</span> (Requires Ferry from Frostspire Expanse)</p>
+                        <p><strong>🎟️ Entry Cost:</strong> 1 Coinite Ore (Pay to Ferry Captain)</p>
                         <p><strong>🔄 Spawn Logic:</strong> Fungi's location within the Secret Maze changes every day.</p>
                         <p><strong>🎯 Role:</strong> Fungi serves as a Merchant (Unique Potions & Weapon Blueprints)</p>
                         <p><strong>📖 Description:</strong> Fungi is a small merchant who sells a unique mining potion and various powerful weapon blueprints.</p>
@@ -177,7 +178,7 @@
         <!-- Shop Section -->
         <div class="content-section">
             <h3>🛒 Fungi's Shop Inventory</h3>
-            <p>Fungi's shop inventory is <strong>randomized daily</strong>. Each day, Fungi displays a selection of <strong>5 items</strong> from the complete list below.</p>
+            <p>Curious about today's <strong>Fungi Shop Stock</strong>? While the shop inventory is <strong>randomized daily</strong>, Fungi only displays a selection of <strong>5 items</strong> from the complete pool below each day. Check the full list to see what you might find!</p>
             
             <div style="overflow-x: auto;">
                 <table class="shop-table">
@@ -293,6 +294,7 @@
             <ul>
                 <li>The <strong>Hidden Maze</strong> on Iceberg Island can be tricky. Fungi moves to a new location within the maze every day.</li>
                 <li>Bring enough <strong>Coins</strong>! Fungi's blueprints are expensive, ranging from $68,000 to $500,000.</li>
+                <li><strong>Need Coinite?</strong> Farm Coinite Ore in the <strong>Crimson Depths</strong> by mining Red Crystals or Heart of the Island rocks. It's rare, so use a Luck potion if you have one!</li>
                 <li>Fungi's Potion is great for mining sessions, providing a boost to both speed and luck.</li>
             </ul>
         </div>
